opam-version: "1.2"
maintainer: "zandoye@gmail.com"
authors: [ "ZAN DoYe" ]
homepage: "https://github.com/kandu/rangeSet/"
bug-reports: "https://github.com/kandu/rangeSet/issues"
license: "MIT"
dev-repo: "git+https://https://github.com/kandu/rangeSet"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "4.02.3"}
  "dune" {>= "1.1.0"}
]

