opam-version: "2.0"
maintainer: "zandoye@gmail.com"
authors: [ "ZAN DoYe" ]
homepage: "https://github.com/kandu/rangeSet/"
bug-reports: "https://github.com/kandu/rangeSet/issues"
license: "MIT"
dev-repo: "git+https://https://github.com/kandu/rangeSet"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "4.02.3"}
  "dune" {>= "1.1.0"}
]
synopsis: "rangeSet"
description: """
This module implements two range set data structure: continuous and discrete range set.

The elements are represented as ranges internally, and is therefore efficient for large set of adjacent elements."""
